# bots-core

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: README.md  ci.yml  publish.yml
docs/: index.md  reference.md
src/botscore/: __about__.py  __init__.py  codecs.py  config.py  constants.py  db.py  errors.py  grammar.py  i18n.py  imports.py  info.py  inmessage.py  io.py  message.py  net.py  node.py  outmessage.py  paths.py  routing.py  runtime.py  scripts.py  state.py  text.py  xmlutil.py
tests/: test_package.py
