[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "botscore"
version = "0.1.0"
description = "Framework-free translation runtime extraction for Bots."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License (GPL v3.0)"}
authors = [
  {name = "The Bots developers"},
]
keywords = ["edi", "x12", "edifact", "csv", "json", "translation", "bots"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ruff>=0.11",
]
test = [
  "pytest>=8.3",
]
excel = [
  "xlrd",
]
template = [
  "Django>=4",
  "Genshi",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["botscore"]
include-package-data = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
